--- a/_settings.json
+++ b/_settings.json
@@ -5,7 +5,13 @@
       "token": "a",
       "export_boards": ["a", "a", "a"],
       "card_list": ["a", "a", "a"],
-      "filter_usernames": ["a", "a", "a", "a"],
+      "filter_users": [
+         {
+            "username": "a",
+            "weekHours": "38",
+            "workPct": "50"
+         }
+      ],
       "filter_startstring": ["a", "a"]
    }
 ]
